<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imgLogo"
        style="@style/Img"
        android:background="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="20pt"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/Txt"
                android:text="@string/username"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_UserName"
                style="@style/Edt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/Txt"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edt_Password"
                style="@style/Edt"
                android:inputType="textPassword" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btLogin"
                    style="@style/btsign_In" />

                <Button
                    android:id="@+id/btRegisn"
                    style="@style/btsign_up" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TxtQuenMatKhau"
                android:text="@string/forgetPass" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>